get-startedセクションの日本語翻訳を完了

--- a/get-started/migrate-from-vscode.mdx
+++ b/get-started/migrate-from-vscode.mdx
@@ -1,35 +1,35 @@
 ---
-title: "Migrate from VS Code"
+title: "VS Codeからの移行"
 ---
 
-Cursor is a fork of VS Code. This allows us to focus on making the best way to code with AI, while offering a familiar text editing experience.
+CursorはVS Codeのフォークです。これにより、使い慣れたテキスト編集環境を提供しながら、AIを使用したコーディングの最適な方法の開発に注力することができます。
 
-### Import Extensions, Themes, Settings, and Keybindings
+### 拡張機能、テーマ、設定、キーバインドのインポート
 
-You can import your VS Code configuration into Cursor with one-click. Navigate to `Cursor Settings` > `General` > `Account`.
+VS Codeの設定をワンクリックでCursorにインポートできます。`Cursor Settings` > `General` > `Account`に移動してください。
 
 <Frame>
   <img src="/images/get-started/vscode-import.png" />
 </Frame>
 
-### Staying Up to Date
+### 最新版への対応
 
-We periodically rebase Cursor onto the latest version of VS Code.
+定期的にCursorをVS Codeの最新バージョンにリベースしています。
 
-### Why Not an Extension?
+### なぜ拡張機能ではないのか？
 
-As a standalone application, Cursor has more control over the UI of the editor, enabling greater AI integration. Some of our features, like Cursor Tab and CMD-K, are not possible as plugins to existing coding environments.
+スタンドアロンアプリケーションとして、CursorはエディタのUIをより細かく制御でき、AIとの統合を深めることができます。Cursor TabやCMD-Kなどの機能は、既存のコーディング環境のプラグインとしては実現できません。
 
-### Settings
+### 設定
 
-You can open Cursor specific settings pane by clicking on the gear button top-right, by pressing `Ctrl/⌘ + Shift + J`, or with `Ctrl/⌘ + Shift + P` and typing `Cursor Settings`. 
+Cursor固有の設定パネルは、右上の歯車ボタンをクリックするか、`Ctrl/⌘ + Shift + J`を押すか、`Ctrl/⌘ + Shift + P`を押して`Cursor Settings`と入力することで開けます。
 
-You can open VS Code specific settings with `Ctrl/⌘ + Shift + P`, and then typing `VS Code Settings`. 
+VS Code固有の設定は、`Ctrl/⌘ + Shift + P`を押して`VS Code Settings`と入力することで開けます。
 
-### Why is the Activity Bar in Cursor horizontal?
+### なぜCursorのアクティビティバーは横向きなのか？
 
 <Frame>
   <img src="/images/get-started/activity-bar.png" />
 </Frame>
 
-The activity bar is horizontal by default to save room for chat. If you prefer the normal vertical activity bar you can go to the VS Code settings and set `workbench.activityBar.orientation` to `vertical`, and restart Cursor.
+アクティビティバーは、チャット用のスペースを確保するためにデフォルトで横向きになっています。従来の縦向きのアクティビティバーを希望する場合は、VS Codeの設定で`workbench.activityBar.orientation`を`vertical`に設定し、Cursorを再起動してください。
