--- a/get-started/usage.mdx
+++ b/get-started/usage.mdx
@@ -1,65 +1,59 @@
 ---
-title: Usage
+title: 使用方法
 ---
 
 <Info>
-For more pricing info, please visit [Cursor Pricing](https://cursor.com/pricing).
+料金の詳細については、[Cursor 料金プラン](https://cursor.com/pricing)をご覧ください。
 </Info>
 
 
-### Subscription Tiers 
+### サブスクリプションプラン
 
-Cursor offers multiple subscription tiers to fit your needs.
+Cursorは、ニーズに合わせて複数のサブスクリプションプランを提供しています。
 - **Hobby**
-  - 14 days **Pro trial**
-  - 50 slow `premium` model uses
-  - 200 `cursor-small` uses
-  - 2000 [completions](/tab/overview) uses
+  - 14日間の**Pro試用期間**
+  - 50回の低速`premium`モデル使用
+  - 200回の`cursor-small`使用
+  - 2000回の[補完](/tab/overview)使用
 - **Pro**
-  - 500 fast `premium` model uses per month
-  - Unlimited slow `premium` model uses
-  - Unlimited `cursor-small` uses
-  - Unlimited [completions](/tab/overview) completions
-  - 10 `Claude Opus` uses per month
+  - 月500回の高速`premium`モデル使用
+  - 無制限の低速`premium`モデル使用
+  - 無制限の`cursor-small`使用
+  - 無制限の[補完](/tab/overview)使用
+  - 月10回の`Claude Opus`使用
 - **Business**
-  - Usage information is the same as the `Pro` tier
-  - Extra benefits, detailed on the [pricing page](https://cursor.com/pricing)
+  - 使用量は`Pro`プランと同じ
+  - その他の特典は[料金ページ](https://cursor.com/pricing)に記載
 
-### Premium models
+### プレミアムモデル
 
-GPT-4, GPT-4o, and Claude 3.5 Sonnet are all counted as `premium` models.
+GPT-4、GPT-4o、Claude 3.5 Sonnetはすべて`premium`モデルとしてカウントされます。
 
-### Pro Trial
+### Pro試用期間
 
-All new users receive a 14-day Pro trial, granting access to all Pro features. After the 14-day period, users who have not upgraded will revert to the Hobby plan.
+新規ユーザーは14日間のPro試用期間を受けられ、すべてのPro機能にアクセスできます。14日間が経過すると、アップグレードしていないユーザーはHobbyプランに戻ります。
 
-### Fast and Slow Requests
+### 高速・低速リクエスト
 
-By default, Cursor servers try to give all users fast `premium` model requests. However, during peak periods, 
-users who run out of fast `premium` credits will be moved to a slow pool, which essentially is a queue of users waiting for 
-a fast `premium` request to become available. 
+デフォルトでは、Cursorサーバーはすべてのユーザーに高速の`premium`モデルリクエストを提供しようとします。ただし、ピーク時には、
+高速`premium`クレジットを使い切ったユーザーは低速プールに移動され、これは高速`premium`リクエストが利用可能になるのを待つユーザーのキューとなります。
 
-This queue is fair, and Cursor will do everything possible to keep the queue as short as possible. 
-However, if you need more fast `premium` credits and don't want to wait, you can add more requests on the [settings page](https://cursor.com/settings).
+このキューは公平で、Cursorはできる限りキューを短くするよう努めます。
+ただし、より多くの高速`premium`クレジットが必要で待ちたくない場合は、[設定ページ](https://cursor.com/settings)でリクエストを追加できます。
 
-### Check Your Usage
+### 使用状況の確認
 
-You can check your usage on the [Cursor Settings](https://cursor.com/settings) page. You can reach this page inside the Cursor application as well, 
-under `Cursor Settings` > `General` > `Account`, and press "Manage Subscription" for pro users, or "Manage" for business users.
+[Cursor設定](https://cursor.com/settings)ページで使用状況を確認できます。このページはCursorアプリケーション内からも、
+`Cursor Settings` > `General` > `Account`から、Proユーザーは「サブスクリプション管理」を、Businessユーザーは「管理」を押すことでアクセスできます。
 
-Cursor usage resets monthly, based on your subscription start date.
+Cursorの使用量は、サブスクリプション開始日を基準に毎月リセットされます。
 
-### Optional Usage-based Pricing
+### オプションの従量課金制
 
-You may opt in to usage-based pricing for requests that go beyond what is included in your plan by visiting your [settings page](https://cursor.com/settings).
+プランに含まれる以上のリクエストについて、[設定ページ](https://cursor.com/settings)で従量課金制を選択できます。
 
-Usage-based pricing details:
-- Usage-based pricing is per calendar month (not necessarily same as your billing cycle, will be billed roughly on the 2nd-3rd day of the month)
-- If you immediately cancel a request or if it errors we do not count it
-- You can configure a hard limit, and you will never ever have to pay more than the hard limit per month (for the usage-based pricing)
-- Right now, usage-based pricing only applies to Claude 3 Opus and a few models in long context chat.
-
-
-
-
-
+従量課金制の詳細：
+- 従量課金は暦月単位です（必ずしも請求サイクルと同じではなく、月の2-3日目に請求されます）
+- リクエストをすぐにキャンセルした場合やエラーが発生した場合はカウントされません
+- ハードリミットを設定でき、従量課金について月額のハードリミットを超えることは決してありません
+- 現在、従量課金はClaude 3 Opusと長文コンテキストチャットの一部のモデルにのみ適用されます
