--- a/get-started/what-is-cursor.mdx
+++ b/get-started/what-is-cursor.mdx
@@ -1,10 +1,9 @@
 ---
-title: What is Cursor?
-description: Built to make you extraordinarily productive.
+title: Cursorとは？
+description: 生産性を最大限に高めるために作られました。
 ---
 
-### What is Cursor?
+### Cursorとは？
 
-Cursor is a code editor that focuses on making the user as productive as possible. 
-
+Cursorは、ユーザーの生産性を可能な限り高めることに焦点を当てたコードエディタです。
 
