advancedセクションの日本語翻訳を完了

--- a/advanced/shadow-workspace.mdx
+++ b/advanced/shadow-workspace.mdx
@@ -1,16 +1,15 @@
 ---
-title: Shadow Workspace
+title: シャドウワークスペース
 ---
 
-The shadow workspace is an opt-in setting you can configure to improve the quality of AI-generated code. Only some features use it.
+シャドウワークスペースは、AI生成コードの品質を向上させるために設定できるオプトイン設定です。一部の機能でのみ使用されます。
 
 <Frame>
-<img src="/images/advanced/shadow-workspace.png" alt="Shadow workspace settings." />
+<img src="/images/advanced/shadow-workspace.png" alt="シャドウワークスペースの設定。" />
 </Frame>
 
-If you have the shadow workspace enabled, background AIs can ask for lints for the code they write. This spawns a hidden window locally on your computer, to ensure that your coding experience is unaffected. 
+シャドウワークスペースを有効にすると、バックグラウンドのAIが書いたコードに対してリントを要求できるようになります。これにより、コーディング体験に影響を与えることなく、ローカルコンピューター上に隠しウィンドウが生成されます。
 
-The shadow workspace will increase the memory usage from Cursor, so we recommend only enabling this feature if you have plenty of RAM.
+シャドウワークスペースはCursorのメモリ使用量を増加させるため、十分なRAMがある場合にのみこの機能を有効にすることをお勧めします。
 
-You can read more about the shadow workspace in [our blog post on it](https://cursor.com/blog/shadow-workspace).
-
+シャドウワークスペースについての詳細は、[シャドウワークスペースに関するブログ記事](https://cursor.com/blog/shadow-workspace) でご確認いただけます。
