--- a/advanced/ai-review.mdx
+++ b/advanced/ai-review.mdx
@@ -1,34 +1,34 @@
 ---
-title: AI Review (Beta)
+title: AIレビュー (ベータ)
 ---
 
-AI Review is a feature that allows you to review your recent changes in your codebase to catch any potential bugs.
+AIレビューは、コードベースの最近の変更をレビューして、潜在的なバグを発見するための機能です。
 
 <Frame>
 <img src="/images/advanced/review.png" alt="AI Review" />
 </Frame>
 
-You can click into individual review items to see the full context in the editor, and chat with the AI to get more information.
+個々のレビュー項目をクリックすると、エディタで完全なコンテキストを確認でき、AIとチャットしてより詳しい情報を得ることができます。
 
-### Custom Review Instructions
+### カスタムレビュー指示
 
-In order for AI Review to work in your favor, you can provide custom instructions for the AI to focus on. For example,
-if you want the AI to focus on performance-related issues, you could put: 
+AIレビューをより効果的に活用するために、AIに焦点を当ててほしい部分についてカスタム指示を提供することができます。
+例えば、パフォーマンスに関する問題に焦点を当てたい場合は、以下のように指定できます：
 
 ```
-focus on the performance of my code
+コードのパフォーマンスに焦点を当てて確認してください
 ```
 
-This way, AI Review will focus on the performance of your code when scanning through your changes. 
+このように、AIレビューはあなたの変更をスキャンする際に、コードのパフォーマンスに焦点を当てて確認します。
 
 
-### Review Options
+### レビューオプション
 
-Currently, you have a several options to choose from to review:
+現在、以下のレビューオプションから選択できます：
 
-- `Review Working State`
-  - This will review your uncommitted changes.
-- `Review Diff with Main Branch`
-  - This will review the diff between your current working state and the main branch.
-- `Review Last Commit`
-  - This will review the last commit you made.
+- `作業状態のレビュー`
+  - コミットされていない変更をレビューします。
+- `メインブランチとの差分レビュー`
+  - 現在の作業状態とメインブランチの差分をレビューします。
+- `最新コミットのレビュー`
+  - 最後に行ったコミットをレビューします。
