--- a/advanced/api-keys.mdx
+++ b/advanced/api-keys.mdx
@@ -1,43 +1,43 @@
 ---
-title: Custom API Keys
+title: カスタムAPIキー
 ---
 
 
-### OpenAI API Keys
+### OpenAI APIキー
 
-Cursor lets you input your own OpenAI API key to send as many AI messages as you want at your own cost.
+Cursorでは、独自のOpenAI APIキーを入力することで、自己負担で好きなだけAIメッセージを送信することができます。
 
-You can get your own API key from [here](https://platform.openai.com/account/api-keys). To use your own API key, go to `Cursor Settings` > `Models` > `OpenAI API Key` and enter your API key. Then, click on the "Verify" button. Once your key is validated, your OpenAI API key will be enabled.
+APIキーは[こちら](https://platform.openai.com/account/api-keys)から取得できます。独自のAPIキーを使用するには、`Cursor設定` > `モデル` > `OpenAI APIキー`に移動し、APIキーを入力します。その後、「検証」ボタンをクリックします。キーが検証されると、OpenAI APIキーが有効になります。
 
 <Frame>
   <img src="/images/misc/openai-api.png" />
 </Frame>
 
-### Anthropic API Keys
+### Anthropic APIキー
 
-Similar to OpenAI, you can also set your own Anthropic API key so that you will be using claude-based models at your own cost. 
+OpenAIと同様に、独自のAnthropic APIキーを設定することで、自己負担でClaude系のモデルを使用することができます。
 
 <Frame>
   <img src="/images/misc/anthropic-api.png" />
 </Frame>
 
-### Google API Keys
+### Google APIキー
 
-For Google API keys, you can set your own API key so that you will be using Google models such as `gemini-1.5-flash-500k` at your own cost.
+Google APIキーについては、独自のAPIキーを設定することで、自己負担で`gemini-1.5-flash-500k`などのGoogleモデルを使用することができます。
 
 <Frame>
   <img src="/images/misc/google-api.png" />
 </Frame>
 
-### Azure Integration
+### Azure連携
 
-Finally, you can also set your own Azure API key so that you will be using Azure OpenAI models at your own cost.
+最後に、独自のAzure APIキーを設定することで、自己負担でAzure OpenAIモデルを使用することもできます。
 
 <Frame>
   <img src="/images/misc/azure-api.png" />
 </Frame>
 
 
-### Will my API key be stored or leave my device?
+### APIキーは保存されたり、デバイスから送信されたりしますか？
 
-Your API key will not be stored, but it will be sent up to our server with every request. All requests are routed through our backend, because that's where we do the final prompt building.
+APIキーは保存されませんが、リクエストごとに当社のサーバーに送信されます。最終的なプロンプトの構築は当社のバックエンドで行われるため、すべてのリクエストは当社のバックエンドを経由します。
