--- a/advanced/models.mdx
+++ b/advanced/models.mdx
@@ -1,30 +1,30 @@
 ---
-title: "Models"
+title: "モデル"
 ---
 
-With Cursor Chat, Ctrl/⌘ K, and Terminal Ctrl/⌘ K, you can easily switch between different models of your choice.
+Cursor Chat、Ctrl/⌘ K、およびTerminal Ctrl/⌘ Kを使用すると、お好みの異なるモデルを簡単に切り替えることができます。
 
 
-### Model Dropdown
+### モデルドロップダウン
 
-Underneath the AI input box, you will see a dropdown that allows you to select the model you want to use. By default, Cursor has these models ready to use:
+AIの入力ボックスの下に、使用したいモデルを選択できるドロップダウンが表示されます。デフォルトでは、Cursorには以下のモデルが使用可能な状態で用意されています：
 
 - [`GPT-4o`](https://openai.com/index/hello-gpt-4o/)
 - [`GPT-4`](https://openai.com/index/gpt-4/)
 - [`Claude 3.5 Sonnet`](https://www.anthropic.com/news/claude-3-5-sonnet)
 - `cursor-small`
-  - `cursor-small` is Cursor's custom model that isn't as smart as `GPT-4`, but is faster and users have unlimited access to it.
+  - `cursor-small`はCursor独自のモデルで、`GPT-4`ほど賢くはありませんが、より高速で、ユーザーは無制限にアクセスできます。
 
-You can add additional models under `Cursor Settings` > `Models` > `Model Names`.
+`Cursor設定` > `モデル` > `モデル名`から追加のモデルを追加できます。
 
 <Frame>
   <img src="/images/advanced/model-toggle.png" />
 </Frame>
 
 
-### Long Context Only Models
+### 長文コンテキスト専用モデル
 
-In long context chat, the model selection is limited to the models that support long context:
+長文コンテキストチャットでは、長文コンテキストをサポートするモデルに選択が制限されます：
 
 - [`gpt-4o-128k`](https://platform.openai.com/docs/models)
 - [`gemini-1.5-flash-500k`](https://deepmind.google/technologies/gemini/flash/)
@@ -33,6 +33,6 @@ In long context chat, the model selection is limited to the models that support 
 - [`claude-3-5-sonnet-200k`](https://www.anthropic.com/news/claude-3-5-sonnet)
 
 
-### What context window is used for model X?
+### モデルXのコンテキストウィンドウはどのくらいですか？
 
-In chat, we limit to around 20,000 tokens at the moment (or less if the model does not support that much context). For cmd-K, we limit to around 10,000 tokens, to balance TTFT and quality. Long-context chat uses the model's maximum context window.
+チャットでは、現在約20,000トークンに制限しています（またはモデルがそれだけのコンテキストをサポートしていない場合はそれ以下）。cmd-Kでは、応答時間と品質のバランスを取るため、約10,000トークンに制限しています。長文コンテキストチャットでは、モデルの最大コンテキストウィンドウを使用します。
