--- a/cmdk/terminal-cmdk.mdx
+++ b/cmdk/terminal-cmdk.mdx
@@ -1,14 +1,14 @@
 ---
-title: Terminal Cmd K
+title: ターミナル Cmd K
 ---
 
-In the built-in Cursor terminal, you can press `Ctrl/⌘ K` to open a prompt bar on the bottom of the terminal. 
-This prompt bar allows you to describe your desired action in the terminal, and terminal Cmd K will generate a command.
-You can accept the command by hitting `esc` or run the command immediately with `Ctrl/⌘ + Enter`.
+Cursorの組み込みターミナルでは、`Ctrl/⌘ K`を押すことでターミナルの下部にプロンプトバーを開くことができます。
+このプロンプトバーでは、ターミナルで実行したいアクションを説明すると、ターミナル Cmd Kがコマンドを生成します。
+コマンドは`esc`キーで承認するか、`Ctrl/⌘ + Enter`で即座に実行することができます。
 
 
 <Frame>
 <img src="/images/cmdk/terminal-cmdk.png" />
 </Frame>
 
-By default, Terminal Cmd K sees your recent terminal history, your instructions, and anything else you put in the prompt bar as context.
+デフォルトでは、ターミナル Cmd Kは最近のターミナル履歴、あなたの指示、およびプロンプトバーに入力された他の情報をコンテキストとして参照します。
