tabセクションの日本語翻訳を完了

--- a/tab/advanced-features.mdx
+++ b/tab/advanced-features.mdx
@@ -1,28 +1,28 @@
 ---
-title: "Advanced Features"
+title: "高度な機能"
 ---
 
-### Tab in Peek
+### ピーク表示でのタブ機能
 
-You can also use Cursor Tab in the "Go to Definition" or "Go to Type Definition" peek views. This is useful, for example, when adding a new argument to a function call.
+"定義へ移動"や"型定義へ移動"のピーク表示でもCursorのタブ機能を使用できます。これは、例えば関数呼び出しに新しい引数を追加する際に便利です。
 
 <Frame>
   <img src="/images/cpp/cpp-in-peek.png"/>
 </Frame>
 
-We especially enjoy using this in vim in conjunction with `gd` to, for example, modify a function definition, then fix all of its usages in one go.
+特にvimで`gd`と組み合わせて使用すると、関数定義を修正し、その使用箇所をまとめて修正できるため重宝します。
 
-### <div className="flex items-center" style={{ gap: '6px' }}>  <span className="cursor-pointer my-0">Cursor Prediction</span></div>
+### <div className="flex items-center" style={{ gap: '6px' }}>  <span className="cursor-pointer my-0">Cursorの予測機能</span></div>
 
-Cursor can also predict where you will go to after an accepted edit.
-If available, you will be able to press tab to go to the next location, allowing you to tab-tab-tab through edits.
+Cursorは編集を受け入れた後の次の移動先を予測することができます。
+利用可能な場合、タブを押して次の場所に移動でき、タブを連続して押すことで編集箇所を順々に進むことができます。
 
-<Frame caption="Cursor predicted the next location, and suggested an edit there.">
+<Frame caption="Cursorが次の場所を予測し、そこでの編集を提案しました。">
 <img src="/images/cpp/cp.png" />
 </Frame>
 
-### <div className="flex items-center" style={{ gap: '6px' }}>  <span className="cursor-pointer my-0">Partial Accepts</span></div>
+### <div className="flex items-center" style={{ gap: '6px' }}>  <span className="cursor-pointer my-0">部分的な受け入れ</span></div>
 
-You can accept the next word of a suggestion by pressing `Ctrl/⌘` and the right arrow (or by setting `editor.action.inlineSuggest.acceptNextWord` to your preferred keybinding).
+提案の次の単語を受け入れるには、`Ctrl/⌘`と右矢印キーを押します（または`editor.action.inlineSuggest.acceptNextWord`を任意のキーバインドに設定します）。
 
-To enable partial accepts, navigate to `Cursor Settings` > `Features` > `Cursor Tab`.
+部分的な受け入れを有効にするには、`Cursor設定` > `機能` > `Cursorタブ`に移動してください。
