--- a/tab/from-gh-copilot.mdx
+++ b/tab/from-gh-copilot.mdx
@@ -1,27 +1,27 @@
 ---
-title: Migrate from GitHub Copilot
+title: GitHub Copilotからの移行
 ---
 
-### Tab Improvements
+### タブの改善点
 
-The biggest difference is the way Cursor and GitHub Copilot complete code.
+CursorとGitHub Copilotの最大の違いは、コードを補完する方法にあります。
 
-GitHub Copilot can insert text at your cursor position. It cannot edit the code around your cursor or remove text.
+GitHub Copilotは、カーソル位置にテキストを挿入することができます。カーソル周辺のコードを編集したり、テキストを削除したりすることはできません。
 
-Cursor can insert text at your cursor, and much more:
-- Multi-character edits 
+Cursorは、カーソル位置にテキストを挿入できるだけでなく、さらに多くのことができます：
+- 複数文字の編集
 <Frame>
 <img src="/images/cpp/multi-edit.png" />
 </Frame>
-- Instruction-based edits  
+- 指示ベースの編集
 <Frame>
 <img src="/images/cpp/instruct.png" />
 </Frame>
 
-Further, Cursor has a history of your recent changes in the context window, so it knows what you are trying to do next.
+さらに、Cursorはコンテキストウィンドウに最近の変更履歴を保持しているため、次に何をしようとしているかを把握しています。
 
-### Migrate from GitHub Copilot
+### GitHub Copilotからの移行
 
-Since Cursor comes by default with GitHub Copilot, you might have GitHub Copilot and Cursor installed at the same time. We recommend turning off GitHub Copilot when you want to use Cursor.
+CursorはデフォルトでGitHub Copilotと一緒に提供されるため、GitHub CopilotとCursorが同時にインストールされている可能性があります。Cursorを使用する際は、GitHub Copilotをオフにすることをお勧めします。
 
-By default, Cursor takes precedence over GitHub Copilot. If you want to use GitHub Copilot, you can [disable Cursor](/tab/overview#copilot-settings) in the settings.
+デフォルトでは、CursorがGitHub Copilotよりも優先されます。GitHub Copilotを使用したい場合は、設定で[Cursorを無効化](/tab/overview#copilot-settings) することができます。
